--- a/index.html
+++ b/index.html
@@ -143,8 +143,27 @@
     </div>
 
 
+    <div class="intro">
+        <div class="intro__item">
+            <div class="intro_content">
+                <div class="intro__name">Не официальный сайт</div>
+                <div class="intro__title">Колледж Информационных технологий</div>
+                <a class="intro__learn">Learn more</a>
+            </div>
+            <img src="assets/image/karta-mira-s-otmechennymi-tochkami-krupnymi-gorodami-karta-zemli.jpg"  class = "inro__obj" alt="">
+        </div>
+    </div>
+
+    <div class="content">
+        <span class="content__line"></span>
+        <div class="content__inner"></div>
+    </div>
+
     <!-- my js -->
     <script src = "assets/scripts/script.js" ></script>
     <script src = "assets/scripts/header.js"></script>
+    <!-- three.js for model -->
+    <script src="js/three.js"></script>
+
 </body>
 </html>
