--- a/index.html
+++ b/index.html
@@ -11,40 +11,10 @@
     <title>Cайт Колледжа информационных технологий</title>
 </head>
 <body>
-    
-    <!-- <div class="pre-header">
-        <div class="container">
-            <div class="pre-header__inner">
-                <div class="pre-header__left">
-                    <div class="icon">
-                        <img src="assets/image/facebook.png" alt="" class="icon__img facebook">
-                    </div>
-                    <div class="icon">
-                        <img src="assets/image/instagram.png" alt="" class="icon__img instagram">
-                    </div>
-                    <div class="icon">
-                        <img src="assets/image/tik-tok.png" alt="" class="icon__img tik-tok">
-                    </div>
-                    <div class="icon">
-                        <img src="assets/image/whatsapp.png" alt="" class="icon__img whatsapp">
-                    </div>
-                </div>
-                <div class="pre-header__right">
-                    <select class="pre__header__select">
-                        <option value="">Русский</option>
-                        <option value="">Казахский</option>
-                        <option value="">Английский</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
     <!-- loader -->
     <div class="loader">
         <span class="loader__block"></span>
     </div>
-   
     <header>
         <div class="container">
             <div class="header__item">
@@ -76,7 +46,6 @@
         <div class="menu__filter">
         <div class="container-max">
             <div class="menu__inner">
-
                 <!-- header -->
                 <div class="menu__item">
                     <div class="header__logo">
@@ -96,7 +65,6 @@
 
                 <!-- menu  blocks -->
                 <div class="menu__content">
-
 
                     <div class="menu__block">
                         <div href = "" class="menu__li">Новости</div>
@@ -136,7 +104,6 @@
                     </div>
                 </div>
 
-
                 </div>
             </div>
         </div>
@@ -156,7 +123,6 @@
     <div class="up__button">
         <a href="#intro">	&#8593;</a>
     </div>
-
 
     <div class="content">
         <div class="container">
@@ -196,7 +162,6 @@
         </div>
     </div>
 
-
     <!-- Слайдер -->
     <div class="pre__slider">
 
@@ -207,7 +172,6 @@
 
         <div class="swiper slider slider__main">
             <div class="swiper-wrapper slider__wrapper">
-
 
                 <div class="swiper-slide slider__item">
                     <div class="slider__img" data-swiper-parallax="20%"  style="background-image: url('assets/image/galerey/pin\ \(4\).jpg')"></div>
@@ -251,7 +215,6 @@
         <div class="swiper slider slider__bg">
             <div class="swiper-wrapper slider__wrapper">
 
-
                 <div class="swiper-slide slider__item">
                     <div class="slider__img" data-swiper-parallax="20%"  style="background-image: url('assets/image/galerey/pin\ \(4\).jpg')"></div>
                 </div>
@@ -292,24 +255,18 @@
         </div>
     </div>
 
-
     <div class="content interest">
         <div class="container">
-            
-            <h2 class="content__h2">МЫ ИМЕЕМ</h2>
-
+            <h2 class="content__h2">У нас есть</h2>
             <div class="interest__item">
-
                 <div class="interest__block">
                     <div class="interest__num">3</div>
                     <p class="interest__p">Учебных коруса</p>
                 </div>
-
                 <div class="interest__block">
                     <div class="interest__num">1</div>
                     <p class="interest__p"> Большой Зал</p>
                 </div>
-
                 <div class="interest__block">
                     <div class="interest__num">1</div>
                     <p class="interest__p">Общежитие</p>
@@ -319,16 +276,13 @@
                     <div class="interest__num">?</div>
                     <p class="interest__p">Лабораторию для Прототипирования</p>
                 </div>
-
             </div>
-
         </div>
     </div>
 
     <div class="prev__news">
         <h2 class="content__h2">Новости</h2>
             <div class="news__item">
-
             <div class="news">
                 <div class="news__image">
                     <img src="assets/image/news/news (4).jpg" alt="">
@@ -339,7 +293,6 @@
                     <!-- <div class="news__description"></div> -->
                 </div>
             </div>
-
             <div class="news">
                 <div class="news__image">
                     <img src="assets/image/news/news (3).jpg" alt="">
@@ -350,7 +303,6 @@
                     <!-- <div class="news__description"></div> -->
                 </div>
             </div>
-
             <div class="news">
                 <div class="news__image">
                     <img src="assets/image/news/news (2).jpg" alt="">
@@ -361,7 +313,6 @@
                     <!-- <div class="news__description"></div> -->
                 </div>
             </div>
-
             <div class="news">
                 <div class="news__image">
                     <img src="assets/image/news/news (1).jpg" alt="">
@@ -372,7 +323,6 @@
                     <!-- <div class="news__description"></div> -->
                 </div>
             </div>
-
             <div class="news">
                 <div class="news__image">
                     <img src="assets/image/news/news (6).jpg" alt="">
@@ -383,7 +333,6 @@
                     <!-- <div class="news__description"></div> -->
                 </div>
             </div>
-
             <div class="news">
                 <div class="news__image">
                     <img src="assets/image/news/news (5).jpg" alt="">
@@ -394,14 +343,12 @@
                     <!-- <div class="news__description"></div> -->
                 </div>
             </div>
-
         </div>
     </div>
 
     <div class="parthner">
         <div class="container">
             <div class="parthner_item">
-
                 <img class="parthner__block" src = "assets/image/parthner/ban-1.jpg">
                 <img class="parthner__block" src = "assets/image/parthner/ban-2.jpg">
                 <img class="parthner__block" src = "assets/image/parthner/ban-3.jpg">
@@ -419,7 +366,6 @@
     </div>
 
     <!-- libres and plagins and frameworks -->
-    <!-- <script src="js/three.js"></script> -->
     <!-- swiper for slider -->
     <script src="assets/libres/node_modules/swiper/swiper-bundle.min.js"></script>
 
